# rust_book

blog/src/: lib.rs  main.rs
chapter_1/: main
chapter_2/guessing_game/src/: main.rs
chapter_3/loops/src/: main.rs
chapter_5/rectangles_canhold/: Cargo.toml
chapter_5/rectangles_canhold/src/: main.rs
chapter_5/rectangles_struct/: Cargo.toml
chapter_5/rectangles_tuples/src/: main.rs
chapter_6/IpAddrEnum/: Cargo.toml
chapter_6/IpAddrEnum/src/: main.rs
chapter_6/coin/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
webserver/: hello.html
webserver/src/: lib.rs
