[package]
name = "minigrep_redoca2k"
version = "0.1.0"
edition = "2021"
description = "A grep like searching utility for searching query in file \n It is implemented as an example from rust book"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
